fix mapcanvas frame overflow

--- a/app/theme/styles/partials/mapcanvas.sass
+++ b/app/theme/styles/partials/mapcanvas.sass
@@ -4,6 +4,8 @@
   position: absolute
   top: 0
   left: 0
+  &-frame
+    overflow: auto
   &-container
     margin: 40px auto
     position: relative
